# algorithms-project-69

./: Makefile  README.md  pyproject.toml
search_engine/: search_engine.py
search_engine/scripts/: engine.py
tests/: tests.py
tests/fixtures/: docs.json
